--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2319,17 +2319,17 @@
  SUD_fascism_DEF:1 "Nubia"
  SUD_democratic:1 "Republic of the Sudan"
  SUD_democratic_DEF:1 "the Republic of the Sudan"
- SUD_neutrality:0 "Sudan"
- SUD_neutrality_DEF:0 "Sudan"
+ SUD_neutrality:0 "Kingdom of Kerma"
+ SUD_neutrality_DEF:0 "the Kingdom of Kerma"
  SUD_communism:1 "Commune of the Sudan"
  SUD_communism_DEF:1 "Commune of the Sudan"
  SUD_fascism_ADJ:1 "Nubia"
  SUD_democratic_ADJ:0 "Sudanese"
- SUD_neutrality_ADJ:0 "Sudanese"
+ SUD_neutrality_ADJ:0 "Kerma"
  SUD_communism_ADJ:0 "Sudanese"
- SUD:0 "Sudan"
- SUD_DEF:0 "Sudan"
- SUD_ADJ:0 "Sudanese"
+ SUD:0 "Kerma"
+ SUD_DEF:0 "Kerma"
+ SUD_ADJ:0 "Kerma"
  ERI_fascism:1 "Unitary Eritrea"
  ERI_fascism_DEF:1 "Unitary Eritrea"
  ERI_democratic:0 "Eritrea"
