--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1288,3 +1288,4 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_13363: "Raithu" # Middle Kingdom Mod from here on
  VICTORY_POINTS_1206: "Yebu"
  VICTORY_POINTS_10073: "Sais"
+ VICTORY_POINTS_12889: "Tjau"
