--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -455,18 +455,18 @@
  STATE_443:0 "Sind"
  STATE_444:0 "Baluchistan"
  STATE_445:0 "Quetta"
- STATE_446:1 "Suez"
- STATE_447:0 "Alexandria"
+ STATE_446:1 "Khenti-labti"
+ STATE_447:0 "Amentet"
  STATE_448:0 "Tripoli"
  STATE_449:0 "El Agheila"
  STATE_450:0 "Benghasi"
  STATE_451:0 "Derna"
  STATE_452:0 "Matrouh"
- STATE_453:0 "Sinai"
+ STATE_453:0 "Sinai Proper"
  STATE_454:0 "Palestine"
  STATE_455:0 "Jordan"
- STATE_456:0 "Aswan"
- STATE_457:1 "Eastern Desert"
+ STATE_456:0 "Waset"
+ STATE_457:1 "Upper Eastern Desert"
  STATE_458:0 "Tunisia"
  STATE_459:0 "Algiers"
  STATE_460:0 "Constantine"
@@ -561,7 +561,7 @@
  STATE_549:1 "Kurdufan"
  STATE_550:0 "Eritrea"
  STATE_551:0 "Khartoum"
- STATE_552:0 "Western Desert"
+ STATE_552:0 "Eastern Libyan Desert"
  STATE_553:0 "Lebanon"
  STATE_554:0 "Damascus"
  STATE_555:0 "Kuril Islands"
@@ -916,7 +916,7 @@
  STATE_904:0 "Nyanza-Rift Valley"
  STATE_905:0 "Mombasa"
  STATE_906:0 "Socotra"
- STATE_907:0 "Memphis"
+ STATE_907:0 "Inebu-Hedj"
  STATE_908:0 "Afar"
  STATE_909: "Schleswig"
  STATE_909_DEN: "Sydslesvig"
@@ -985,7 +985,25 @@
  STATE_967: "Amazon" # impassables
  STATE_968: "Amazon" # impassables
  STATE_969: "Rio Branco"
- STATE_970: "Kharga"
- STATE_971: "Southern Sinai"
- 
-
+ STATE_970: "Western Desert"
+ STATE_971: "Upper Sinai"
+ STATE_972: "Wadi Hammamat"
+ STATE_973: "Lower Eastern Desert"
+ STATE_974: "Ta-Seti"
+ STATE_975: "Nekhen"
+ STATE_976: "Ta-wer"
+ STATE_977: "Nemty"
+ STATE_978: "Nart Peht"
+ STATE_979: "Nile delta"
+ STATE_980: "Lower Sinai"
+ STATE_981: "Kharga"
+ STATE_982: "Selima"
+ STATE_983: "Dunqul"
+ STATE_984: "Lower Nubia"
+ STATE_985: "Middle Nubia"
+ STATE_986: "Upper Nubia"
+ STATE_987: "Fifth Cataract"
+ STATE_988: "Sixth Cataract"
+ STATE_989: "Nubian Desert"
+ STATE_990: "Medja"
+ STATE_991: "Bayuda Desert"
